--- a/CLI OS Emulator/CLI OS Emulator.vcxproj.filters
+++ b/CLI OS Emulator/CLI OS Emulator.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="CLI OS Emulator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MainConsole.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="MainConsole.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
