--- a/CLI OS Emulator/CLI OS Emulator.vcxproj.filters
+++ b/CLI OS Emulator/CLI OS Emulator.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="PrintCommand.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
