--- a/CLI OS Emulator/CLI OS Emulator.vcxproj
+++ b/CLI OS Emulator/CLI OS Emulator.vcxproj
@@ -129,28 +129,38 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AddCommand.cpp" />
     <ClCompile Include="CLI OS Emulator.cpp" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="CPUCoreWorker.cpp" />
+    <ClCompile Include="DeclareCommand.cpp" />
     <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="MainConsole.cpp" />
     <ClCompile Include="PrintCommand.cpp" />
+    <ClCompile Include="PrintVariableCommand.cpp" />
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="ProcessConsole.cpp" />
     <ClCompile Include="Scheduler.cpp" />
+    <ClCompile Include="SleepCommand.cpp" />
+    <ClCompile Include="SubtractCommand.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AddCommand.h" />
     <ClInclude Include="Console.h" />
     <ClInclude Include="ConsoleManager.h" />
     <ClInclude Include="constants.h" />
     <ClInclude Include="CPUCoreWorker.h" />
+    <ClInclude Include="DeclareCommand.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="MainConsole.h" />
     <ClInclude Include="PrintCommand.h" />
+    <ClInclude Include="PrintVariableCommand.h" />
     <ClInclude Include="Process.h" />
     <ClInclude Include="ProcessConsole.h" />
     <ClInclude Include="Scheduler.h" />
+    <ClInclude Include="SleepCommand.h" />
+    <ClInclude Include="SubtractCommand.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
