--- a/CLI OS Emulator/CLI OS Emulator.vcxproj
+++ b/CLI OS Emulator/CLI OS Emulator.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -135,8 +135,11 @@
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="CPUCoreWorker.cpp" />
     <ClCompile Include="DeclareCommand.cpp" />
+    <ClCompile Include="DemandPagingMemoryManager.cpp" />
+    <ClCompile Include="FlatMemoryManager.cpp" />
     <ClCompile Include="ICommand.cpp" />
     <ClCompile Include="MainConsole.cpp" />
+    <ClCompile Include="MemoryManager.cpp" />
     <ClCompile Include="PrintCommand.cpp" />
     <ClCompile Include="PrintVariableCommand.cpp" />
     <ClCompile Include="Process.cpp" />
@@ -152,8 +155,11 @@
     <ClInclude Include="constants.h" />
     <ClInclude Include="CPUCoreWorker.h" />
     <ClInclude Include="DeclareCommand.h" />
+    <ClInclude Include="DemandPagingMemoryManager.h" />
+    <ClInclude Include="FlatMemoryManager.h" />
     <ClInclude Include="ICommand.h" />
     <ClInclude Include="MainConsole.h" />
+    <ClInclude Include="MemoryManager.h" />
     <ClInclude Include="PrintCommand.h" />
     <ClInclude Include="PrintVariableCommand.h" />
     <ClInclude Include="Process.h" />
